--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,7 @@
 * {
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* width */
@@ -32,4 +33,11 @@
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #395B64;
+}
+
+.circle.circle-orange-1 {
+  box-shadow: 0px 0px 100px 0px rgba(200, 75, 49, 0.50);
+}
+.circle.circle-orange-2 {
+  box-shadow: 0px 0px 100px 0px rgba(236, 219, 186, 0.50);
 }
