--- a/styles/globals.css
+++ b/styles/globals.css
@@ -48,9 +48,9 @@ header {
 }
 
 .intro-section {
-  box-shadow: 0px -75px 100px 0px rgba(200, 75, 49, 0.50);
+  box-shadow: 0px 0 50px 0px rgba(200, 75, 49, 0.50);
 }
 
 .about-section {
-  box-shadow: 0px 75px 100px 0px rgba(200, 75, 49, 0.50);
+  box-shadow: 0px 0 50px 0px rgba(200, 75, 49, 0.50);
 }
